# ts-courser

./: .gitignore  CLAUDE.md  README.md  main.py  manage.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_avatar_user_bio_user_display_name_and_more.py
courses/: admin.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_episode_options_alter_episode_unique_together_and_more.py  0003_alter_episode_answer_pdf_alter_episode_type.py  0004_episode_show_interactive_episode_show_reference.py  0005_course_course_code_course_enrollment_mode_and_more.py  0006_course_auto_release_results_alter_episode_answer_pdf.py  0007_episode_quiz_require_all_episode_quiz_show_results.py
courses/templatetags/: course_filters.py
docs/: ADD_EPISODE_TYPE.md
progress/: admin.py  models.py  urls.py  views.py
progress/migrations/: 0001_initial.py  0002_courseenrollment.py  0003_quizsubmission.py
static/css/: console.css
static/js/: console.js  pyodide-api.js  pyodide-interpreter.js  pyodide-worker.js  quiz-editor.js  worker-apis.js
teacher/: decorators.py  urls.py  views.py
templates/: base.html
templates/accounts/: login.html  profile.html  profile_edit.html  register.html
templates/courses/: course_dashboard.html  course_list.html  course_overview.html  learning_interface.html
templates/progress/: my_courses.html
ts_courser/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
(+13 files in other folders)
